Allows this projcet to be used in other projects

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
       "strict": true,
       "strictNullChecks": true,
       "sourceMap": true,
+      "composite" : true,
       "declaration": true,
       "declarationMap": true,
       "allowSyntheticDefaultImports": true,
