--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   },
   "dependencies": {
     "@types/node": "^16.6.1",
-    "typescript": "^4.3.5"
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "typescript": "^4.3.5",
+    "vega": "^5.20.2",
+    "vega-lite": "^5.1.0"
   },
   "devDependencies": {
     "ts-node": "^10.2.1"
