--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@types/node": "^16.6.1",
+    "tone": "^14.7.77",
     "typescript": "^4.3.5",
     "vega": "^5.20.2",
     "vega-embed": "^6.18.2",
