--- a/package.json
+++ b/package.json
@@ -9,28 +9,33 @@
     "build": "tsc",
     "start": "node ./dist/lib/lib.js",
     "dev": "ts-node ./src/lib.ts",
+    "test": "mocha -r ts-node/register test/**/*.test.ts",
     "lint": "eslint '*/**/*.{js,ts}' --quiet --fix"
   },
   "husky": {
     "hooks": {
-        "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged"
     }
-},
-"lint-staged": {
+  },
+  "lint-staged": {
     "*.{js,ts}": [
-        "eslint --fix"
+      "eslint --fix"
     ]
-},
+  },
   "dependencies": {
     "@types/node": "^16.6.1",
     "typescript": "^4.3.5"
   },
   "devDependencies": {
+    "@types/chai": "^4.2.21",
+    "@types/mocha": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^4.29.2",
     "@typescript-eslint/parser": "^4.29.2",
+    "chai": "^4.3.4",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "mocha": "^9.1.0",
     "prettier": "^2.3.2",
     "ts-node": "^10.2.1"
   }
