--- a/package.json
+++ b/package.json
@@ -27,14 +27,13 @@
         ]
     },
     "dependencies": {
-        "@types/node": "^16.9.1"
+        "@types/node": "^16.9.1",
+        "vega": "^5.21.0",
+        "vega-embed": "^6.19.1"
     },
     "devDependencies": {
         "@semantic-release/exec": "^5.0.0",
         "@semantic-release/git": "^9.0.1",
-        "semantic-release": "^17.4.7",
-        "microbundle": "^0.13.3",
-        "typescript": "^4.4.3",
         "@types/chai": "^4.2.21",
         "@types/mocha": "^9.0.0",
         "@typescript-eslint/eslint-plugin": "^4.31.1",
@@ -43,8 +42,11 @@
         "eslint": "^7.32.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "microbundle": "^0.13.3",
         "mocha": "^9.1.1",
         "prettier": "^2.4.0",
-        "ts-node": "^10.2.1"
+        "semantic-release": "^17.4.7",
+        "ts-node": "^10.2.1",
+        "typescript": "^4.4.3"
     }
 }
