--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "sonification",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "library that provides sonification primitives to make data accessible.",
     "source": "src/sonification.ts",
     "exports": "./dist/sonification.modern.js",
@@ -47,6 +47,7 @@
         "prettier": "^2.4.0",
         "semantic-release": "^17.4.7",
         "ts-node": "^10.2.1",
-        "typescript": "^4.4.3"
+        "typescript": "^4.4.3",
+        "standardized-audio-context" : "^25.3.12"
     }
 }
