--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     },
     "dependencies": {
         "@types/node": "^16.9.1",
+        "http-server": "^14.0.0",
         "vega": "^5.21.0",
         "vega-embed": "^6.19.1"
     },
@@ -46,8 +47,8 @@
         "mocha": "^9.1.1",
         "prettier": "^2.4.0",
         "semantic-release": "^17.4.7",
+        "standardized-audio-context": "^25.3.12",
         "ts-node": "^10.2.1",
-        "typescript": "^4.4.3",
-        "standardized-audio-context" : "^25.3.12"
+        "typescript": "^4.4.3"
     }
 }
