--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "watch:build": "microbundle watch",
         "test": "mocha",
         "watch:test": "mocha --watch",
-        "watch": "concurrently 'npm:watch:*'",
+        "dev": "concurrently 'npm:watch:*'",
         "lint": "eslint '*/**/*.{js,ts}' --quiet --fix"
     },
     "husky": {
