--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "watch:build": "microbundle watch",
         "test": "mocha",
         "watch:test": "mocha --watch",
+        "serve": "live-server --open=public/index.html",
         "dev": "concurrently 'npm:watch:*'",
         "lint": "eslint '*/**/*.{js,ts}' --quiet --fix"
     },
@@ -46,9 +47,11 @@
         "@typescript-eslint/eslint-plugin": "^5.2.0",
         "@typescript-eslint/parser": "^5.2.0",
         "chai": "^4.3.4",
+        "concurrently": "^6.3.0",
         "eslint": "^8.1.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "live-server": "^1.2.1",
         "microbundle": "^0.14.1",
         "mocha": "^9.1.3",
         "prettier": "^2.4.1",
