--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - uses: bahmutov/npm-install@v1
-      - run: yarn build
+      - run: yarn bundle
       - run: yarn test
       - run: npx semantic-release
         if: ${{ github.ref == 'refs/heads/main' }}
