--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
         "src"
     ],
     "scripts": {
-        "build": "microbundle",
-        "watch:build": "microbundle watch",
+        "bundle": "microbundle",
+        "watch:bundle": "microbundle watch",
+        "start": "react-scripts start",
+        "eject": "react-scripts eject",
         "test": "mocha",
         "watch:test": "mocha --watch",
         "serve": "live-server --open=public/index.html",
@@ -40,12 +42,14 @@
         "vega-embed": "^6.20.0"
     },
     "devDependencies": {
-        "@semantic-release/exec": "^6.0.1",
-        "@semantic-release/git": "^10.0.0",
+        "@semantic-release/exec": "^6.0.2",
+        "@semantic-release/git": "^10.0.1",
         "@types/chai": "^4.2.22",
         "@types/mocha": "^9.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.2.0",
-        "@typescript-eslint/parser": "^5.2.0",
+        "@types/react": "^17.0.34",
+        "@types/react-dom": "^17.0.11",
+        "@typescript-eslint/eslint-plugin": "^5.3.0",
+        "@typescript-eslint/parser": "^5.3.0",
         "chai": "^4.3.4",
         "concurrently": "^6.3.0",
         "eslint": "^8.1.0",
@@ -55,8 +59,23 @@
         "microbundle": "^0.14.1",
         "mocha": "^9.1.3",
         "prettier": "^2.4.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-scripts": "4.0.3",
         "semantic-release": "^18.0.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4"
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
     }
 }
