--- a/package.json
+++ b/package.json
@@ -36,10 +36,17 @@
     },
     "dependencies": {
         "@monaco-editor/react": "^4.3.1",
+        "@storybook/addon-actions": "^6.3.12",
         "@types/node": "^16.11.6",
+        "bootstrap": "^5.1.3",
         "monaco-editor": "^0.29.1",
+        "react-addons-pure-render-mixin": "^15.6.3",
+        "react-bootstrap": "^2.0.2",
+        "react-vega": "^7.4.4",
+        "storybook": "^6.3.12",
         "vega": "^5.21.0",
-        "vega-embed": "^6.20.0"
+        "vega-embed": "^6.20.0",
+        "vega-lite": "^5.1.1"
     },
     "devDependencies": {
         "@semantic-release/exec": "^6.0.2",
@@ -53,6 +60,7 @@
         "chai": "^4.3.4",
         "concurrently": "^6.3.0",
         "eslint-plugin-prettier": "^4.0.0",
+        "eslint-plugin-react-hooks": "^4.3.0",
         "live-server": "^1.2.1",
         "microbundle": "^0.14.1",
         "mocha": "^9.1.3",
