--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "dependencies": {
         "@monaco-editor/react": "^4.3.1",
         "@types/node": "^16.11.6",
+        "ajv": "^8.7.1",
         "monaco-editor": "^0.29.1",
         "vega": "^5.21.0",
         "vega-embed": "^6.20.0"
