--- a/package.json
+++ b/package.json
@@ -35,9 +35,12 @@
         ]
     },
     "dependencies": {
+        "@material-ui/core": "^4.12.3",
+        "@material-ui/lab": "^4.0.0-alpha.60",
         "@monaco-editor/react": "^4.3.1",
         "@types/node": "^16.11.6",
         "ajv": "^8.7.1",
+        "csv-parser": "^3.0.0",
         "monaco-editor": "^0.29.1",
         "vega": "^5.21.0",
         "vega-embed": "^6.20.0"
