--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@monaco-editor/react": "^4.3.1",
         "@types/node": "^16.11.6",
         "ajv": "^8.7.1",
+        "arquero": "^4.8.7",
         "csv-parser": "^3.0.0",
         "monaco-editor": "^0.29.1",
         "vega": "^5.21.0",
