--- a/package.json
+++ b/package.json
@@ -35,9 +35,13 @@
         ]
     },
     "dependencies": {
+        "@emotion/react": "^11.5.0",
+        "@emotion/styled": "^11.3.0",
         "@material-ui/core": "^4.12.3",
         "@material-ui/lab": "^4.0.0-alpha.60",
         "@monaco-editor/react": "^4.3.1",
+        "@mui/icons-material": "^5.1.0",
+        "@mui/material": "^5.1.0",
         "@types/node": "^16.11.6",
         "ajv": "^8.7.1",
         "arquero": "^4.8.7",
