--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
         "allowJs": true,
         "allowSyntheticDefaultImports": true,
         "noFallthroughCasesInSwitch": true,
+        "noImplicitAny": false,
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
