--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
         "eject": "react-scripts eject",
         "serve": "live-server --open=public/index.html",
         "dev": "concurrently 'npm:watch:*'",
-        "lint": "eslint '*/**/*.{js,ts}' --quiet --fix"
+        "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
+        "pretify": "prettier --write src/**"
     },
     "husky": {
         "hooks": {
