--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "csv-parser": "^3.0.0",
         "d3": "^7.1.1",
         "monaco-editor": "^0.29.1",
+        "react-router-dom": "^6.0.2",
         "vega": "^5.21.0",
         "vega-embed": "^6.20.0"
     },
