--- a/package.json
+++ b/package.json
@@ -37,15 +37,10 @@
     },
     "dependencies": {
         "@types/node": "^16.11.6",
-        "d3": "^7.1.1"
+        "d3": "^7.1.1",
+        "rxjs": "^7.5.2"
     },
     "devDependencies": {
-        "vega": "^5.21.0",
-        "vega-embed": "^6.20.0",
-        "monaco-editor": "^0.29.1",
-        "ajv": "^8.7.1",
-        "arquero": "^4.8.7",
-        "csv-parser": "^3.0.0",
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.2.0",
@@ -59,20 +54,26 @@
         "@types/react-dom": "^17.0.11",
         "@typescript-eslint/eslint-plugin": "^5.3.0",
         "@typescript-eslint/parser": "^5.3.0",
+        "ajv": "^8.7.1",
+        "arquero": "^4.8.7",
         "chai": "^4.3.4",
         "concurrently": "^6.3.0",
+        "csv-parser": "^3.0.0",
         "eslint-plugin-prettier": "^4.0.0",
         "live-server": "^1.2.1",
         "microbundle": "^0.14.1",
         "mocha": "^9.1.3",
+        "monaco-editor": "^0.29.1",
         "prettier": "^2.4.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2",
         "react-scripts": "4.0.3",
         "semantic-release": "^18.0.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4",
-        "react-router-dom": "^6.0.2"
+        "vega": "^5.21.0",
+        "vega-embed": "^6.20.0"
     },
     "browserslist": {
         "production": [
