--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
         "moduleResolution": "node",
         "resolveJsonModule": true,
         "isolatedModules": true,
-        "noEmit": true
+        "noEmit": true,
+        "downlevelIteration": true
     },
     "include": ["src"]
 }
