--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "jacdac-ts"]
 	path = jacdac-ts
 	url = https://github.com/microsoft/jacdac-ts
+[submodule "jacdac-docs"]
+	path = jacdac-docs
+	url = https://github.com/microsoft/jacdac-docs
