add jacdac-ts, react-jacdac

--- a/package.json
+++ b/package.json
@@ -38,7 +38,10 @@
     "dependencies": {
         "@types/node": "^16.11.6",
         "d3": "^7.1.1",
-        "rxjs": "^7.5.2"
+        "jacdac-ts": "^1.24.4",
+        "react-jacdac": "^1.1.1",
+        "rxjs": "^7.5.2",
+        "webusb": "^2.2.0"
     },
     "devDependencies": {
         "@emotion/react": "^11.7.0",
