build makecode binary as part of build

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -50,7 +50,7 @@
         [
             "@semantic-release/git",
             {
-                "assets": ["package.json"]
+                "assets": ["package.json", "makecode-microbit/binary.hex"]
             }
         ]
     ]
