--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,6 +18,8 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - uses: bahmutov/npm-install@v1
       - run: yarn bundle
+      - run: npm install -g makecode
+      - run: yarn makecode
       - run: npx semantic-release
         if: ${{ github.ref == 'refs/heads/main' }}
         env:
