--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "start": "react-scripts start",
         "eject": "react-scripts eject",
         "build": "react-scripts build",
+        "deploy": "gh-pages -d build",
         "serve": "live-server --open=public/index.html",
         "dev": "concurrently 'npm:watch:*'",
         "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
@@ -41,6 +42,7 @@
     "dependencies": {
         "@types/node": "^16.11.6",
         "d3": "^7.1.1",
+        "gh-pages": "^4.0.0",
         "jacdac-ts": "^1.24.20",
         "react-jacdac": "^1.1.3",
         "rxjs": "^7.5.2",
