more fiddling with router

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "psst",
-    "homepage": "https://make4all.github.io/psst/",
+    "homepage": ".",
     "version": "1.1.2",
     "description": "library that provides sonification primitives to make data accessible.",
     "source": "src/sonifier.ts",
