--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
         "@types/node": "^16.11.6",
         "d3": "^7.1.1",
         "jacdac-ts": "^1.24.20",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-jacdac": "^1.1.3",
         "rxjs": "^7.5.2",
         "rxjs-spy": "^8.0.2",
