--- a/package.json
+++ b/package.json
@@ -40,13 +40,16 @@
     },
     "dependencies": {
         "@types/node": "^16.11.6",
+        "commander": "^11.0.0",
         "d3": "^7.1.1",
         "jacdac-ts": "^1.24.20",
+        "react-copy-to-clipboard": "^5.1.0",
         "react-jacdac": "^1.1.3",
         "rxjs": "^7.5.2",
         "rxjs-spy": "^8.0.2",
         "typedoc": "^0.22.11",
-        "webusb": "^2.2.0"
+        "webusb": "^2.2.0",
+        "yargs": "^17.7.2"
     },
     "devDependencies": {
         "@emotion/react": "^11.7.0",
