--- a/package.json
+++ b/package.json
@@ -46,7 +46,16 @@
         "rxjs": "^7.5.2",
         "rxjs-spy": "^8.0.2",
         "typedoc": "^0.22.11",
-        "webusb": "^2.2.0"
+        "webusb": "^2.2.0",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^13.4.0",
+        "@testing-library/user-event": "^13.5.0",
+        "@types/jest": "^27.5.2",
+        "axios": "^1.3.2",
+        "highlight.js": "^11.7.0",
+        "react-contenteditable": "^3.3.6",
+        "react-markdown": "^8.0.5",
+        "web-vitals": "^2.1.4"
     },
     "devDependencies": {
         "@emotion/react": "^11.7.0",
