--- a/package.json
+++ b/package.json
@@ -39,25 +39,26 @@
         ]
     },
     "dependencies": {
-        "@types/node": "^16.11.6",
-        "d3": "^7.1.1",
-        "jacdac-ts": "^1.24.20",
-        "react-jacdac": "^1.1.3",
-        "rxjs": "^7.5.2",
-        "rxjs-spy": "^8.0.2",
-        "typedoc": "^0.22.11",
-        "webusb": "^2.2.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
+        "@types/node": "^16.11.6",
         "axios": "^1.3.2",
+        "d3": "^7.1.1",
         "highlight.js": "^11.7.0",
+        "jacdac-ts": "^1.24.20",
         "react-contenteditable": "^3.3.6",
+        "react-jacdac": "^1.1.3",
         "react-markdown": "^8.0.5",
-        "web-vitals": "^2.1.4"
+        "rxjs": "^7.5.2",
+        "rxjs-spy": "^8.0.2",
+        "typedoc": "^0.22.11",
+        "web-vitals": "^2.1.4",
+        "webusb": "^2.2.0"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
         "@emotion/react": "^11.7.0",
         "@emotion/styled": "^11.6.0",
         "@mui/icons-material": "^5.2.0",
@@ -67,8 +68,8 @@
         "@semantic-release/git": "^10.0.1",
         "@types/chai": "^4.2.22",
         "@types/mocha": "^9.0.0",
-        "@types/react": "^17.0.34",
-        "@types/react-dom": "^17.0.11",
+        "@types/react": "18",
+        "@types/react-dom": "18",
         "@typescript-eslint/eslint-plugin": "^5.3.0",
         "@typescript-eslint/parser": "^5.3.0",
         "ajv": "^8.7.1",
@@ -82,28 +83,21 @@
         "mocha": "^9.1.3",
         "monaco-editor": "^0.29.1",
         "prettier": "^2.4.1",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
+        "react": "18",
+        "react-dom": "18",
         "react-router-dom": "^6.0.2",
         "react-scripts": "4.0.3",
         "semantic-release": "^18.0.0",
         "ts-node": "^10.4.0",
-        "typescript": "^4.4.4",
+        "typescript": "^4.3.5",
         "vega": "^5.21.0",
         "vega-embed": "^6.20.0"
     },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
+    "browserslist": [
+        ">0.2%",
+        "not dead",
+        "not op_mini all"
+    ],
     "repository": "https://github.com/make4all/psst.git",
     "author": "Jennifer Mankoff <jmankoff@cs.washington.edu>"
 }
