--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
         "rxjs-spy": "^8.0.2",
         "typedoc": "^0.22.11",
         "web-vitals": "^2.1.4",
-        "webusb": "^2.2.0"
+        "webusb": "^2.2.0",
+        "openai": "^4.0.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
