--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "d3": "^7.1.1",
         "highlight.js": "^11.7.0",
         "jacdac-ts": "^1.24.20",
+        "openai": "^4.0.0",
         "react-contenteditable": "^3.3.6",
         "react-jacdac": "^1.1.3",
         "react-markdown": "^8.0.5",
@@ -55,8 +56,7 @@
         "rxjs-spy": "^8.0.2",
         "typedoc": "^0.22.11",
         "web-vitals": "^2.1.4",
-        "webusb": "^2.2.0",
-        "openai": "^4.0.0"
+        "webusb": "^2.2.0"
     },
     "devDependencies": {
         "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
