--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "scripts": {
         "bundle": "microbundle",
         "watch:bundle": "microbundle watch",
-        "start": "react-scripts start",
+        "start": "env-cmd -f .env react-scripts start",
         "eject": "react-scripts eject",
         "build": "react-scripts build",
         "serve": "live-server --open=public/index.html",
@@ -46,9 +46,11 @@
         "@types/node": "^16.11.6",
         "axios": "^1.3.2",
         "d3": "^7.1.1",
+        "dotenv": "^16.3.1",
+        "env-cmd": "^10.1.0",
         "highlight.js": "^11.7.0",
         "jacdac-ts": "^1.24.20",
-        "openai": "^4.0.0",
+        "openai": "^4.17.0",
         "react-contenteditable": "^3.3.6",
         "react-jacdac": "^1.1.3",
         "react-markdown": "^8.0.5",
