--- a/package.json
+++ b/package.json
@@ -43,8 +43,8 @@
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^13.5.0",
         "@types/jest": "^27.5.2",
-        "@types/node": "^16.11.6",
         "axios": "^1.3.2",
+        "copyfiles": "^2.4.1",
         "d3": "^7.1.1",
         "dotenv": "^16.3.1",
         "env-cmd": "^10.1.0",
@@ -54,6 +54,8 @@
         "react-contenteditable": "^3.3.6",
         "react-jacdac": "^1.1.3",
         "react-markdown": "^8.0.5",
+        "readline": "^1.3.0",
+        "readline-promise": "^1.0.5",
         "rxjs": "^7.5.2",
         "rxjs-spy": "^8.0.2",
         "typechat": "^0.0.10",
@@ -72,6 +74,7 @@
         "@semantic-release/git": "^10.0.1",
         "@types/chai": "^4.2.22",
         "@types/mocha": "^9.0.0",
+        "@types/node": "^20.10.0",
         "@types/react": "18",
         "@types/react-dom": "18",
         "@typescript-eslint/eslint-plugin": "^5.3.0",
@@ -83,7 +86,7 @@
         "csv-parser": "^3.0.0",
         "eslint-plugin-prettier": "^4.0.0",
         "live-server": "^1.2.1",
-        "microbundle": "^0.14.1",
+        "microbundle": "^0.15.1",
         "mocha": "^9.1.3",
         "monaco-editor": "^0.29.1",
         "prettier": "^2.4.1",
@@ -93,7 +96,7 @@
         "react-scripts": "4.0.3",
         "semantic-release": "^18.0.0",
         "ts-node": "^10.4.0",
-        "typescript": "^4.3.5",
+        "typescript": "^4.1.3",
         "vega": "^5.21.0",
         "vega-embed": "^6.20.0"
     },
