--- a/package.json
+++ b/package.json
@@ -8,20 +8,21 @@
         "require": "./dist/sonifier.cjs",
         "default": "./dist/sonifier.modern.js"
     },
-    "main": "./dist/sonifier.cjs",
-    "module": "./dist/sonifier.module.js",
+    "main": "build/index.js",
+    "module": "build/indes.cjs.js",
     "unpkg": "./dist/sonifier.umd.js",
     "license": "MIT",
     "files": [
         "dist",
-        "src"
+        "src",
+        "build"
     ],
     "scripts": {
         "bundle": "microbundle",
         "watch:bundle": "microbundle watch",
         "start": "react-scripts start",
         "eject": "react-scripts eject",
-        "build": "react-scripts build",
+        "build": "rollup --config",
         "serve": "live-server --open=public/index.html",
         "dev": "concurrently 'npm:watch:*'",
         "lint": "eslint '*/**/*.{js,ts}' --quiet --fix",
@@ -54,6 +55,10 @@
         "@mui/icons-material": "^5.2.0",
         "@mui/material": "^5.2.2",
         "@mui/x-data-grid": "^5.0.1",
+        "@rollup/plugin-commonjs": "^25.0.7",
+        "@rollup/plugin-json": "^6.1.0",
+        "@rollup/plugin-node-resolve": "^15.2.3",
+        "@rollup/plugin-typescript": "^11.1.6",
         "@semantic-release/exec": "^6.0.2",
         "@semantic-release/git": "^10.0.1",
         "@types/chai": "^4.2.22",
@@ -77,6 +82,7 @@
         "react-dom": "^17.0.2",
         "react-router-dom": "^6.0.2",
         "react-scripts": "4.0.3",
+        "rollup": "^2.79.1",
         "semantic-release": "^18.0.0",
         "ts-node": "^10.4.0",
         "typescript": "^4.4.4",
